--- a/Lab08Tests/Lab08Tests.csproj
+++ b/Lab08Tests/Lab08Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lab08\Lab08-Collections.csproj" />
+  </ItemGroup>
+
 </Project>
